# basic_mcp_lab

./: .env.example  README.md  pyproject.toml
src/: main.py
src/basic_mcp_lab/: anthropic.py  base_client.py  cerebras.py
